--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "gh-pages": "^5.0.0",
-    "json-server": "^0.17.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
@@ -17,10 +16,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "json-server": "json-server --watch db.json --port 8000",
+    "start": "concurrently \"json-server --watch ./database/newsData.json --port 8000\" \"react-scripts start\"",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -56,6 +54,7 @@
     "url": "https://github.com/saurabh957515/NewsTak-App/issues"
   },
   "devDependencies": {
-    "concurrently": "^8.0.1"
+    "concurrently": "^8.0.1",
+    "json-server": "^0.17.3"
   }
 }
